# adnot-hs

./: .gitignore  LICENSE  README.md  adnot.cabal  adtn.cabal
Data/: ADTN.hs  Adnot.hs
Data/Adnot/: Class.hs  Emit.hs  Parse.hs  Type.hs
adnot-id/: Main.hs
