name:                adnot
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Getty Ritter
maintainer:          gettyritter@gmail.com
copyright:           ©2016 Getty Ritter
category:            Data
build-type:          Simple
cabal-version:       >=1.12

library
  exposed-modules:     Data.Adnot
  other-modules:       Data.Adnot.Parse,
                       Data.Adnot.Class,
                       Data.Adnot.Emit,
                       Data.Adnot.Type
  build-depends:       base >=4.8 && <5,
                       attoparsec,
                       bytestring,
                       deepseq,
                       hashable,
                       containers,
                       text,
                       vector
  default-language:    Haskell2010

executable adnot-id
  default-language: Haskell2010
  hs-source-dirs:   adnot-id
  main-is:          Main.hs
  build-depends:    base >=4.8 && <5,
                    bytestring,
                    adnot
